feature: enforce role-based access control with @PreAuthorize on admin-only endpoints